# KinBot

./: .gitignore  301020900180000000001_well.py  LICENSE  README  README.md  __init__.py  build.sh  chemids  conda_build_config.yaml  geometry.xyz  meta.yaml  pyproject.toml  setup.py
ase_modules/calculators/: gaussian.py  qchem.py
ase_modules/io/: formats.py  gaussian.py  zmatrix.py
examples/gvl_reactions/: README  gvl.json
examples/pentyl_pes/: README  pentyl.json
examples/propanol_homolytic_scissions/: README  propanol.json
examples/propanol_radical_ME/: README  propanoyl.json  propenoyl.json
examples/propyl/: README  propyl.json  qu.tmp
kinbot/: .VRC_TST_surfaces.py.swp  BFGS.py  VRC_TST_surfaces.py  __init__.py  bfgs.py  bmat.py  bond_combinations.py  butane.py  calc_rmsd.py  cheminfo.py  config_log.py  conformers.py  constants.py  eric_thread_summary.txt  exceptions.py  filecopying.py  findMotif.py  find_motif.py  fireworks.py  fireworks_setup.py  fragments.py  frequencies.py  geom.py  geometry.py  hello.py  heptane.py  high_level.py  hindered_rotors.py  hir.py  homolytic_scissions.py  inputs_eric.py  inputs_ini_ts.py  irc.py  jobs.py  kb.py  kb_trigo.py  kinbot.py  license_message.py  mesmer.py  mess.py  (+86 more)
kinbot/ase_modules/: constraints.py
kinbot/reactions/: reac_12_shift_S_F.py  reac_12_shift_S_R.py  reac_Cyclic_Ether_Formation.py  reac_Diels_alder_addition.py  reac_HO2_Elimination_from_PeroxyRadical.py  reac_Intra_Diels_alder_R.py  reac_Intra_RH_Add_Endocyclic_R.py  reac_Intra_RH_Add_Exocyclic_F.py  reac_Intra_R_Add_ExoTetCyclic_F.py  reac_Intra_disproportionation_R.py  reac_Korcek_step2_odd.py  reac_R_Addition_MultipleBond.py  reac_beta_delta.py  reac_bimol_disproportionation_R.py  reac_birad_recombination_R.py  reac_combinatorial.py  reac_h2_elim.py  reac_intra_H_migration_suprafacial.py  reac_intra_R_migration.py  reac_proton_transfer.py  reac_r13_insertion_ROR.py  reac_r13_insertion_RSR.py  reac_r14_birad_scission.py  reac_r22_cycloaddition.py  reac_vrc_tst_scan.py  reac_vrc_tst_scan_frozen.py
kinbot/tpl/: ase_fc_hir.tpl.py  ase_fc_irc.tpl.py  ase_fc_opt_well.tpl.py  ase_fc_ring_conf.tpl.py  ase_fc_ts_end.tpl.py  ase_fc_ts_search.tpl.py  ase_gauss_hir.tpl.py  ase_gauss_irc.tpl.py  ase_gauss_opt_vrc_tst.tpl.py  ase_gauss_opt_well.tpl.py  ase_gauss_ring_conf.tpl.py  ase_gauss_ts_end.tpl.py  ase_gauss_ts_search.tpl.py  ase_gauss_vts.tpl  ase_gauss_vts.tpl.py  ase_nwchem_freq_well.tpl.py  ase_nwchem_irc.tpl.py  ase_nwchem_ts_search.tpl.py  ase_qchem_irc.tpl.py  ase_qchem_opt_well.tpl.py  ase_qchem_ts_end.tpl.py  ase_qchem_ts_search.tpl.py  ase_sella_hir.tpl.py  ase_sella_irc.tpl.py  ase_sella_opt_well.tpl.py  ase_sella_ring_conf.tpl.py  ase_sella_ts_end.tpl.py  ase_sella_ts_search.tpl.py  ase_sella_vts.tpl.py  mess_atom.tpl  mess_barrierless.tpl  mess_dummy.tpl  mess_fragment.tpl  mess_fragment_OH.tpl  (+22 more)
reactions/: __init__.py  reac_12_shift_S_F.py  reac_Diels_alder_addition.py  reac_HO2_Elimination_from_PeroxyRadical.py  reac_Intra_Diels_alder_R.py  reac_Intra_RH_Add_Endocyclic_F.py  reac_Intra_RH_Add_Exocyclic_F.py  reac_Intra_RH_Add_Exocyclic_R.py  reac_Intra_R_Add_Endocyclic_F.py  reac_Intra_R_Add_ExoTetCyclic_F.py  reac_Intra_R_Add_Exocyclic_F.py  reac_Intra_disproportionation_F.py  reac_Korcek_step2.py  reac_Korcek_step2_even.py  reac_R_Addition_COm3_R.py  reac_R_Addition_CSm_R.py  reac_R_Addition_MultipleBond.py  reac_Retro_Ene.py  reac_abstraction.py  reac_barrierless_saddle.py  reac_birad_recombination_F.py  reac_cpd_H_migration.py  reac_h2_elim.py  reac_homolytic_scission.py  reac_intra_H_migration.py  reac_intra_H_migration_suprafacial.py  reac_intra_OH_migration.py  reac_intra_OH_migration_Exocyclic_F.py  reac_ketoenol.py  reac_r12_cycloaddition.py  reac_r12_insertion_R.py  reac_r13_insertion_CO2.py  reac_r13_insertion_RSR.py  reac_r14_cyclic_birad_scission_R.py  reac_r22_cycloaddition.py  reac_ringexpand_F.py
tests/: bfgs.py  cheminfo.py  conformers.py  dihedral_data.inp  dihedral_test.py  find_motif.py  frequencies.py  geometry.py  modify_geom.py  multimolecular.py  multimolecular_data.inp  multimolecular_data.json  resonance.py  resonance_data.inp  symmetry.py  symmetry_data.inp  symmetry_data.json  test_kinbot.py  zmat_test.py  zmat_test_input.inp
tpl/: ase_gauss_freq_well.py.tpl  ase_gauss_freq_well.tpl.py  ase_gauss_hir.py.tpl  ase_gauss_hir.tpl.py  ase_gauss_irc.py.tpl  ase_gauss_irc.tpl.py  ase_gauss_opt_well.py.tpl  ase_gauss_opt_well.tpl.py  ase_gauss_ring_conf.py.tpl  ase_gauss_ring_conf.tpl.py  ase_gauss_ts_end.py.tpl  ase_gauss_ts_end.tpl.py  ase_gauss_ts_search.py.tpl  ase_gauss_ts_search.tpl.py  ase_gauss_ts_search_pcobfgs.py.tpl  ase_nwchem_irc.py.tpl  ase_nwchem_opt_well.py.tpl  ase_nwchem_ts_end.tpl.py  ase_nwchem_ts_search_ase_constraints.tpl.py  ase_qchem_hir.tpl.py  ase_qchem_irc.tpl.py  ase_qchem_opt_well.tpl.py  ase_qchem_ring_conf.tpl.py  ase_qchem_ts_end.tpl.py  ase_qchem_ts_search.tpl.py  barrierless_mess.tpl  barrierless_prod_mess.tpl  gauss_HO2_Elimination_from_PeroxyRadical_0.tpl  gauss_HO2_Elimination_from_PeroxyRadical_1.tpl  gauss_freq.tpl  gauss_irc.tpl  gauss_opt_ts.tpl  gauss_opt_well.tpl  gauss_singlept.tpl  gauss_ts_scan_mid.tpl  gauss_ts_scan_start.tpl  gauss_ts_search_end.tpl  gauss_ts_search_start.tpl  mess_2tst.tpl  mess_atom.tpl  (+44 more)
(+8 files in other folders)
