[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["build", "dist", "KinBot.egg-info", "graphics"]

[tool.setuptools.package-data]
"kinbot.tpl" = ["*.tpl.py", "*.tpl", "*.png"]

[project]
name = "kinbot"
version = "2.2.4a"
description = "Automated reaction kinetics for gas-phase species"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
# keywords = []
authors = [
    {name="Judit Zádor", email="jzador@sandia.gov"},
    {name="Ruben Van de Vijver", email="ruben.vandevijver@ugent.be"},
    {name="Carles Martí", email="cmartia@sandia.gov"},
    {name="Clément Soulié", email="csoulie@sandia.gov"},
    {name="Amanda Dewyer", email="adewyer@sandia.gov"},
]
maintainers = [
    {name="Judit Zádor", email="jzador@sandia.gov"},
    {name="Clément Soulié", email="csoulie@sandia.gov"},
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
        "numpy>=1.17.0",
        "ase>=3.26",
        "networkx",
        "rmsd>=1.5.1",
        "sella"
]

[project.optional-dependencies]
plot = [
    "matplotlib",
    "pyvis",
    "rdkit"
]
# FAIRChem/UMA machine-learning interatomic potential backend (qc = 'fc').
# fairchem-core pins numpy>=2.0 and ase>=3.26 and pulls in torch, so it is
# kept as an optional extra rather than a core dependency.
fc = [
    "fairchem-core>=2.0"
]

[project.urls]
homepage = "https://github.com/zadorlab/KinBot"
documentation = "https://github.com/zadorlab/KinBot/wiki"

[project.scripts]
kinbot = "kinbot.kb:main"
pes = "kinbot.pes:main"
